2/24/22
created new firebase server
- https://polyhaven-940a4-default-rtdb.firebaseio.com/
-made sample user info
made http to fetch user data in webapp
displayed user data at bottom of homepage
bonus points? updated index.html file to show more accurate site name and logo on tab


2/23/22
Added 2 new splash elements to main page
-one has ngfor loop describing most recent patrons
-other is standard about us splash
Beginning to set library sidebars as their own components


2/17/22
Added routing for all libraries
-All/combined, HDRI, Texture, and Model pages created
-working on activating all links to them
+putting refs on ngfor components on todo list
implemented library sidebars
made home page the default route