@@ -1,3 +1,10 @@
+3/9/22
+-created library section in database
+-added fetch library system from database
++created library service to fetch
++used model to parse .json object format
+-started to rearrange files into component folders for better file structuring and readability
+
 2/24/22
 created new firebase server
 - https://polyhaven-940a4-default-rtdb.firebaseio.com/
